--- a/week_1/day_1/indentation_practice.html
+++ b/week_1/day_1/indentation_practice.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Indentation Practice</title>
 </head>
 <body>
-    <h1>My title</h1>
+    <h1 id="main_title">My title</h1>
     <h3>Paragraph 1</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quod soluta, neque reiciendis perspiciatis praesentium reprehenderit corporis, deserunt magni, quis optio debitis voluptatem ipsa ullam tenetur repudiandae molestias quia. Earum?</p>
-    
-    <img src="" alt="">
 
-    <ul>
-        <li>
-            <a href="">Go to Google</a>
-        </li>
-        <li>Bullet Point</li>
-    </ul>
+    <p class="body_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quod soluta, neque reiciendis perspiciatis praesentium reprehenderit corporis, deserunt magni, quis optio debitis voluptatem ipsa ullam tenetur repudiandae molestias quia. Earum?</p>
+    <p class="body_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quod soluta, neque reiciendis perspiciatis praesentium reprehenderit corporis, deserunt magni, quis optio debitis voluptatem ipsa ullam tenetur repudiandae molestias quia. Earum?</p>
+    
+    <img id="cat" src="https://www.nationalgeographic.com/content/dam/news/2018/05/17/you-can-train-your-cat/02-cat-training-NationalGeographic_1484324.ngsversion.1526587209178.adapt.1900.1.jpg" alt="">
+
 
     <table>
         <thead>
@@ -37,6 +34,8 @@
             </tr>
         </tbody>
     </table>
+    <h1 id="footer">Footer</h1>
+    <p>Footer notes</p>
 
 
     <form action="">
