--- a/week_2/jQuery/index.html
+++ b/week_2/jQuery/index.html
@@ -18,10 +18,12 @@
 <body>
     <h1 id="title">Hello World</h1>
     <!-- <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/151AB/production/_111434468_gettyimages-1143489763.jpg" alt="" id="cat_pic"> -->
-    <h3>Hide this h3</h3>
-    <h3>Hide this h3</h3>
-    <h3>Hide this h3</h3>
-    <h3>Hide this h3</h3>
+    <div>
+        <h3>Hide this h3</h3>
+        <h3>Hide this h3</h3>
+        <h3>Hide this h3</h3>
+        <h3>Hide this h3</h3>
+    </div>
     <div id="text_body">
         <h1>This is a text body</h1>
     </div>
